--- a/.gitignore
+++ b/.gitignore
@@ -46,5 +46,6 @@ sysinfo.txt
 /Assets/SplineMesh/Doc.txt
 /Assets/SplineMesh/DemoAssets.meta
 /Assets/SplineMesh/Scripts/Exemple.meta
+/Assets/SplineMesh/Scripts/Editor/SplineExtrusionEditor.cs
 
 # Other stuff
