mixed resetted from fbddf6e441fb38e66599e919d5629fd2f966540a to clean the branch

--- a/.gitignore
+++ b/.gitignore
@@ -48,4 +48,8 @@ sysinfo.txt
 /Assets/SplineMesh/Scripts/Exemple.meta
 /Assets/SplineMesh/Scripts/Editor/SplineExtrusionEditor.cs
 
+#Lightmap
+/Assets/Scenes/Poniville/LightingData.*
+/Assets/Scenes/Poniville/Lightmap*
+
 # Other stuff
